--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	 	<div class="col-md-l2">
 	 		<div class="intro-message">
 	 			<h1>
-	 			THIS IS MY TAGLINE
+	 			Hello
 	 			</h1>
 	 		 	<h3>
 	 		 	SUB HEADER GOES HERE
