--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 	 	<div class="col-md-l2">
 	 		<div class="intro-message">
 	 			<h1>
-	 			FREEFORM
+	 			WELCOME TO FREEFORM
 	 			</h1>
 	 		 	<h3>
-	 		 	LANDING PAGE
+	 		 	FULL SITE COMING SOON
 	 		 	</h3>
 	 		</div>
 	 	</div>
@@ -42,7 +42,7 @@
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;"><input type="text" name="b_5d1fa3e333613e5db01ede4da_4a2b1148f7" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn="success"></div>
     </div>
 </form>
 </div>
