--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	 	<div class="col-md-l2">
 	 		<div class="intro-message">
 	 			<h1>
-	 			WELCOME TO FREEFORM
+	 			WELCOME TO Fr33F0RM
 	 			</h1>
 	 		 	<h3>
 	 		 	FULL SITE COMING SOON
