--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	 			WELCOME TO Fr33F0RM
 	 			</h1>
 	 		 	<h3>
-	 		 	FULL SITE COMING SOON
+	 		 	Find, Create, or Transform
 	 		 	</h3>
 	 		</div>
 	 	</div>
